# Transpiler-python-

./: Dockerfile  Makefile
Transpiler/: pyproject.toml
Transpiler/transpiler/: Dsl.py  dependency.py  main.py  sample.js  visitors.py
Transpiler/transpiler/PC/: __init__.py  component.py  dsl.py  identifier.py  layer.py  prop_reference.py
Transpiler/transpiler/PC/decoder/: __init__.py  decode.py  visitor.py
Transpiler/transpiler/PC/decoder/errors/: __init__.py  decode.py
Transpiler/transpiler/PC/decoder/lib/: PC.interp  PCLexer.py  PCVisitor.py  __init__.py
Transpiler/transpiler/PC/encoder/: __init__.py  encoder.py  validator.py
Transpiler/transpiler/PC/encoder/errors/: __init__.py  structural_integrity.py
Transpiler/transpiler/PC/errors/: __init__.py  duplicate_identifier.py  identifier_not_found.py  invalid_identifier.py  invalid_transaction.py
antlr/: PC.g4
libs/: PC.tokens  PCLexer.interp  PCParser.py
